@@ -80,6 +80,30 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|SolrCore
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -150,8 +174,28 @@ name|AddUpdateCommand
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
+
 begin_comment
-comment|/**  * A non-duplicate processor. Removes duplicates in the specified fields.  *   *<pre class="prettyprint">  *&lt;updateRequestProcessorChain name="uniq-fields"&gt;  *&lt;processor class="org.apache.solr.update.processor.UniqFieldsUpdateProcessorFactory"&gt;  *&lt;lst name="fields"&gt;  *&lt;str&gt;uniq&lt;/str&gt;  *&lt;str&gt;uniq2&lt;/str&gt;  *&lt;str&gt;uniq3&lt;/str&gt;  *&lt;/lst&gt;        *&lt;/processor&gt;  *&lt;processor class="solr.RunUpdateProcessorFactory" /&gt;  *&lt;/updateRequestProcessorChain&gt;</pre>  *   */
+comment|/**  * Removes duplicate values found in fields matching the specified conditions.    * The existing field values are iterated in order, and values are removed when   * they are equal to a value that has already been seen for this field.  *<p>  * By default this processor matches no fields.  *</p>  *   *<p>  * In the example configuration below, if a document initially contains the values   *<code>"Steve","Lucy","Jim",Steve","Alice","Bob","Alice"</code> in a field named   *<code>foo_uniq</code> then using this processor will result in the final list of   * field values being<code>"Steve","Lucy","Jim","Alice","Bob"</code>  *</p>  *<pre class="prettyprint">  *&lt;processor class="solr.UniqFieldsUpdateProcessorFactory"&gt;  *&lt;str name="fieldRegex"&gt;.*_uniq&lt;/str&gt;  *&lt;/processor&gt;  *</pre>   */
 end_comment
 
 begin_class
@@ -160,16 +204,44 @@ specifier|public
 class|class
 name|UniqFieldsUpdateProcessorFactory
 extends|extends
-name|UpdateRequestProcessorFactory
+name|FieldValueSubsetUpdateProcessorFactory
 block|{
-DECL|field|fields
-specifier|private
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|fields
+DECL|field|log
+specifier|public
+specifier|final
+specifier|static
+name|Logger
+name|log
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|UniqFieldsUpdateProcessorFactory
+operator|.
+name|class
+argument_list|)
 decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|FieldMutatingUpdateProcessor
+operator|.
+name|FieldNameSelector
+DECL|method|getDefaultSelector
+name|getDefaultSelector
+parameter_list|(
+specifier|final
+name|SolrCore
+name|core
+parameter_list|)
+block|{
+return|return
+name|FieldMutatingUpdateProcessor
+operator|.
+name|SELECT_NO_FIELDS
+return|;
+block|}
 annotation|@
 name|SuppressWarnings
 argument_list|(
@@ -191,6 +263,8 @@ name|NamedList
 name|args
 parameter_list|)
 block|{
+comment|// legacy init param support, will be removed in 5.0
+comment|// no idea why this was ever implimented as<lst> should have just been<arr>
 name|NamedList
 argument_list|<
 name|String
@@ -205,7 +279,7 @@ argument_list|>
 operator|)
 name|args
 operator|.
-name|get
+name|remove
 argument_list|(
 literal|"fields"
 argument_list|)
@@ -217,210 +291,131 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|fields
-operator|=
-operator|new
-name|HashSet
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Use of the 'fields' init param in UniqFieldsUpdateProcessorFactory is deprecated, please use 'fieldName' (or another FieldMutatingUpdateProcessorFactory selector option) instead"
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Replacing 'fields' init param with (individual) 'fieldName' params"
+argument_list|)
 expr_stmt|;
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|flst
+name|Map
 operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|entry
+range|:
+name|flst
 control|)
 block|{
-name|fields
+name|args
 operator|.
 name|add
 argument_list|(
-name|flst
-operator|.
-name|getVal
-argument_list|(
-name|i
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-annotation|@
-name|Override
-DECL|method|getInstance
-specifier|public
-name|UpdateRequestProcessor
-name|getInstance
-parameter_list|(
-name|SolrQueryRequest
-name|req
-parameter_list|,
-name|SolrQueryResponse
-name|rsp
-parameter_list|,
-name|UpdateRequestProcessor
-name|next
-parameter_list|)
-block|{
-return|return
-operator|new
-name|UniqFieldsUpdateProcessor
-argument_list|(
-name|next
+literal|"fieldName"
 argument_list|,
-name|fields
-argument_list|)
-return|;
-block|}
-DECL|class|UniqFieldsUpdateProcessor
-specifier|public
-class|class
-name|UniqFieldsUpdateProcessor
-extends|extends
-name|UpdateRequestProcessor
-block|{
-DECL|field|fields
-specifier|private
-specifier|final
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|fields
-decl_stmt|;
-DECL|method|UniqFieldsUpdateProcessor
-specifier|public
-name|UniqFieldsUpdateProcessor
-parameter_list|(
-name|UpdateRequestProcessor
-name|next
-parameter_list|,
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|fields
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|next
+name|entry
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
 expr_stmt|;
-name|this
+block|}
+block|}
+name|super
 operator|.
-name|fields
-operator|=
-name|fields
+name|init
+argument_list|(
+name|args
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|processAdd
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|pickSubset
 specifier|public
-name|void
-name|processAdd
+name|Collection
+name|pickSubset
 parameter_list|(
-name|AddUpdateCommand
-name|cmd
+name|Collection
+name|values
 parameter_list|)
-throws|throws
-name|IOException
 block|{
-if|if
-condition|(
-name|fields
-operator|!=
-literal|null
-condition|)
-block|{
-name|SolrInputDocument
-name|solrInputDocument
+name|Set
+argument_list|<
+name|Object
+argument_list|>
+name|uniqs
 init|=
-name|cmd
-operator|.
-name|getSolrInputDocument
+operator|new
+name|HashSet
+argument_list|<
+name|Object
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|List
 argument_list|<
 name|Object
 argument_list|>
-name|uniqList
+name|result
 init|=
 operator|new
 name|ArrayList
 argument_list|<
 name|Object
 argument_list|>
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|String
-name|field
-range|:
-name|fields
-control|)
-block|{
-name|uniqList
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-name|Collection
-argument_list|<
-name|Object
-argument_list|>
-name|col
-init|=
-name|solrInputDocument
-operator|.
-name|getFieldValues
 argument_list|(
-name|field
+name|values
+operator|.
+name|size
+argument_list|()
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|col
-operator|!=
-literal|null
-condition|)
-block|{
 for|for
 control|(
 name|Object
 name|o
 range|:
-name|col
+name|values
 control|)
 block|{
 if|if
 condition|(
 operator|!
-name|uniqList
+name|uniqs
 operator|.
 name|contains
 argument_list|(
 name|o
 argument_list|)
 condition|)
-name|uniqList
+block|{
+name|uniqs
+operator|.
+name|add
+argument_list|(
+name|o
+argument_list|)
+expr_stmt|;
+name|result
 operator|.
 name|add
 argument_list|(
@@ -428,42 +423,10 @@ name|o
 argument_list|)
 expr_stmt|;
 block|}
-name|solrInputDocument
-operator|.
-name|remove
-argument_list|(
-name|field
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|Object
-name|o
-range|:
-name|uniqList
-control|)
-block|{
-name|solrInputDocument
-operator|.
-name|addField
-argument_list|(
-name|field
-argument_list|,
-name|o
-argument_list|)
-expr_stmt|;
 block|}
-block|}
-block|}
-block|}
-name|super
-operator|.
-name|processAdd
-argument_list|(
-name|cmd
-argument_list|)
-expr_stmt|;
-block|}
+return|return
+name|result
+return|;
 block|}
 block|}
 end_class
