@@ -468,6 +468,182 @@ literal|0.0F
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testUniqValues
+specifier|public
+name|void
+name|testUniqValues
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|chain
+init|=
+literal|"uniq-values"
+decl_stmt|;
+name|SolrInputDocument
+name|d
+init|=
+literal|null
+decl_stmt|;
+name|d
+operator|=
+name|processAdd
+argument_list|(
+name|chain
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1111"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"Hoss"
+argument_list|,
+literal|"Man"
+argument_list|,
+literal|"Hoss"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"uniq_1_s"
+argument_list|,
+literal|"Hoss"
+argument_list|,
+literal|"Man"
+argument_list|,
+literal|"Hoss"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"uniq_2_s"
+argument_list|,
+literal|"Foo"
+argument_list|,
+literal|"Hoss"
+argument_list|,
+literal|"Man"
+argument_list|,
+literal|"Hoss"
+argument_list|,
+literal|"Bar"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"uniq_3_s"
+argument_list|,
+literal|5.0F
+argument_list|,
+literal|23
+argument_list|,
+literal|"string"
+argument_list|,
+literal|5.0F
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"Hoss"
+argument_list|,
+literal|"Man"
+argument_list|,
+literal|"Hoss"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"name"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"Hoss"
+argument_list|,
+literal|"Man"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"uniq_1_s"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"Foo"
+argument_list|,
+literal|"Hoss"
+argument_list|,
+literal|"Man"
+argument_list|,
+literal|"Bar"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"uniq_2_s"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|5.0F
+argument_list|,
+literal|23
+argument_list|,
+literal|"string"
+argument_list|)
+argument_list|,
+name|d
+operator|.
+name|getFieldValues
+argument_list|(
+literal|"uniq_3_s"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testTrimFields
 specifier|public
 name|void
